// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr/changelog/releases getReleaseNotes() should contain both currentVersion toVersion unstable 1`] = `
Array [
  Object {
    "version": "1.0.1-rc0",
  },
  Object {
    "version": "1.0.1-rc1",
  },
  Object {
    "version": "1.0.1",
  },
  Object {
    "version": "1.1.0",
  },
  Object {
    "version": "1.2.0-rc0",
  },
  Object {
    "version": "1.2.0-rc1",
  },
]
`;

exports[`workers/pr/changelog/releases getReleaseNotes() should contain currentVersion unstable 1`] = `
Array [
  Object {
    "version": "1.0.1-rc0",
  },
  Object {
    "version": "1.0.1-rc1",
  },
  Object {
    "version": "1.0.1",
  },
  Object {
    "version": "1.1.0",
  },
]
`;

exports[`workers/pr/changelog/releases getReleaseNotes() should contain only stable 1`] = `
Array [
  Object {
    "version": "1.0.0",
  },
  Object {
    "version": "1.0.1",
  },
  Object {
    "version": "1.1.0",
  },
]
`;

exports[`workers/pr/changelog/releases getReleaseNotes() should contain toVersion unstable 1`] = `
Array [
  Object {
    "version": "1.0.1",
  },
  Object {
    "version": "1.1.0",
  },
  Object {
    "version": "1.2.0-rc0",
  },
  Object {
    "version": "1.2.0-rc1",
  },
]
`;

exports[`workers/pr/changelog/releases getReleaseNotes() should valueToVersion 1`] = `
Array [
  Object {
    "version": "1.0.1",
  },
  Object {
    "version": "1.1.0",
  },
  Object {
    "version": "1.2.0",
  },
]
`;
